--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html" charset="utf-8" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,6 +28,11 @@
     <img class="pub1 " id="img1 " src="./images/pubBigdiego.png ">
     <img class="pub2 " id="img2 " src="./images/shipper.png ">
     <img class="pub3 " id="img3 " src="./images/baniereMacdo.png ">
+    <div class="commander">
+        <h3 class="pfont ctitle">Commander</h3>
+        <p class="pfont ctext">Decouvrer le meilleur de McDora avec nos nouveau burgers!</p>
+        <button class="btn btn-primary cbtn pfont">Commander</button>
+    </div>
 
     <script src="./app.js "></script>
 
