--- a/nosrestau/index.html
+++ b/nosrestau/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html" charset="utf-8" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,9 +22,16 @@
         <li class="banneritem"><a href="/aboutpage" class="pfont">A Propos</a></li>
         <li class="banneritem"><a href="/connection" class="pfont">Se Connecter</a></li>
     </ul>
-    <h1><strong>NOS RESTAURANTs <strong></h1>
+    <h1 class="pfont title">Nos Restaurants</h1>
 
-<img class="lacarte" src="./image/cartedoram.png" >
+    <img class="lacarte" src="../images/cartedoram.png">
+
+    <div class="commander">
+        <h3 class="pfont ctitle">Commander</h3>
+        <p class="pfont ctext">Decouvrer le meilleur de McDora avec nos nouveau burgers!</p>
+        <button class="btn btn-primary cbtn pfont">Commander</button>
+    </div>
 
 </body>
+
 </html>
