fixed redirects part 2

--- a/order/index.html
+++ b/order/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="products menus">
         <div class="product product1">
-            <img src="/images/MenuBestOf.png" class="productimg">
+            <img src="../images/MenuBestOf.png" class="productimg">
             <button class="btn btn-warning orderbtn">Menu Best Of 5€</button>
         </div>
         <div class="product product4">
