--- a/aboutpage/index.html
+++ b/aboutpage/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <ul class="banner">
-        <li class="banneritem"><a href="/" class="pfont">McDora</a></li>
+        <li class="banneritem"><a href="/mcDora/" class="pfont">McDora</a></li>
         <li class="banneritem"><a href="/mcDora/order" class="pfont">Menus</a></li>
         <li class="banneritem"><a href="/mcDora/nosrestau" class="pfont">Restaurants</a></li>
         <li class="banneritem"><a href="/mcDora/aboutpage" class="pfont">A Propos</a></li>
