--- a/order/index.html
+++ b/order/index.html
@@ -31,42 +31,42 @@
             <button class="btn btn-warning orderbtn">Menu Best Of 5€</button>
         </div>
         <div class="product product4">
-            <img src="/images/menuDora.png" class="productimg">
+            <img src="../images/menuDora.png" class="productimg">
             <button class="btn btn-warning orderbtn">Menu Dora 5€</button>
         </div>
         <div class="product product7">
-            <img src="/images/menuHappyMeal.png" class="productimg">
+            <img src="../images/menuHappyMeal.png" class="productimg">
             <button class="btn btn-warning orderbtn">Menu Happy Meal 5€</button>
         </div>
     </div>
 
     <div class="products burgers">
         <div class="product product1">
-            <img src="/images/mcChipper.png" class="productimg">
+            <img src="../images/mcChipper.png" class="productimg">
             <button class="btn btn-warning orderbtn">McChipper 1€</button>
         </div>
         <div class="product product10">
-            <img src="/images/croqueLaCarte.png" class="productimg">
+            <img src="../images/croqueLaCarte.png" class="productimg">
             <button class="btn btn-warning orderbtn">Croque Carte 2€</button>
         </div>
         <div class="product product5">
-            <img src="/images/wrapBabouche.png" class="productimg">
+            <img src="../images/wrapBabouche.png" class="productimg">
             <button class="btn btn-warning orderbtn">Wrap Babouche 3€</button>
         </div>
         <div class="product product4">
-            <img src="/images/bigDiego.png" class="productimg">
+            <img src="../images/bigDiego.png" class="productimg">
             <button class="btn btn-warning orderbtn">Big Diego 4€</button>
         </div>
         <div class="product product2">
-            <img src="/images/mcDora.png" class="productimg">
+            <img src="../images/mcDora.png" class="productimg">
             <button class="btn btn-warning orderbtn">McDora 5€</button>
         </div>
         <div class="product product8">
-            <img src="/burger2.png" class="productimg">
+            <img src="../burger2.png" class="productimg">
             <button class="btn btn-warning orderbtn">McTasty 6€</button>
         </div>
         <div class="product product7">
-            <img src="/burger.png" class="productimg">
+            <img src="../burger.png" class="productimg">
             <button class="btn btn-warning orderbtn">BigMac 7€</button>
         </div>
 
@@ -74,43 +74,43 @@
 
     <div class="products boissons">
         <div class="product product1">
-            <img src="/images/fanta.png " class="productimg ">
+            <img src="../images/fanta.png " class="productimg ">
             <button class="btn btn-warning orderbtn ">Fanta 1€</button>
         </div>
         <div class="product product2 ">
-            <img src="/images/coca.png " class="productimg ">
+            <img src="../images/coca.png " class="productimg ">
             <button class="btn btn-warning orderbtn ">Coca 1€</button>
         </div>
         <div class="product product3 ">
-            <img src="/images/icetea.png " class="productimg ">
+            <img src="../images/icetea.png " class="productimg ">
             <button class="btn btn-warning orderbtn ">Ice Tea 1€</button>
         </div>
         <div class="product product4 ">
-            <img src="/images/sprite.png " class="productimg ">
+            <img src="../images/sprite.png " class="productimg ">
             <button class="btn btn-warning orderbtn ">Sprite 1€</button>
         </div>
         <div class="product product5 ">
-            <img src="/images/biere.png " class="productimg ">
+            <img src="../images/biere.png " class="productimg ">
             <button class="btn btn-warning orderbtn ">Bière 1€</button>
         </div>
         <div class="product product6 ">
-            <img src="/images/vodka.png " class="productimg ">
+            <img src="../images/vodka.png " class="productimg ">
             <button class="btn btn-warning orderbtn ">Vodka 1€</button>
         </div>
         <div class="product product7 ">
-            <img src="/images/get27.png " class="productimg ">
+            <img src="../images/get27.png " class="productimg ">
             <button class="btn btn-warning orderbtn ">Get 27 1€</button>
         </div>
         <div class="product product8 ">
-            <img src="/images/get31.png " class="productimg ">
+            <img src="../images/get31.png " class="productimg ">
             <button class="btn btn-warning orderbtn ">Get 31 1€</button>
         </div>
         <div class="product product9 ">
-            <img src="/images/captainmorgan.png " class="productimg ">
+            <img src="../images/captainmorgan.png " class="productimg ">
             <button class="btn btn-warning orderbtn ">Captain Morgan 1€</button>
         </div>
         <div class="product product10 ">
-            <img src="/images/whisky.png " class="productimg ">
+            <img src="../images/whisky.png " class="productimg ">
             <button class="btn btn-warning orderbtn ">Whisky 1€</button>
         </div>
 
@@ -118,59 +118,59 @@
 
     <div class="products desserts ">
         <div class="product product1 ">
-            <img src="/images/icecream.webp " class="productimg ">
+            <img src="../images/icecream.webp " class="productimg ">
             <button class="btn btn-warning orderbtn ">icecream 2€</button>
         </div>
         <div class="product product2 ">
-            <img src="/images/mcflurry.png " class="productimg ">
+            <img src="../images/mcflurry.png " class="productimg ">
             <button class="btn btn-warning orderbtn ">McFlurry 2€</button>
         </div>
         <div class="product product3 ">
-            <img src="/images/sundae.webp " class="productimg ">
+            <img src="../images/sundae.webp " class="productimg ">
             <button class="btn btn-warning orderbtn ">Sundae 2€</button>
         </div>
         <div class="product product4 ">
-            <img src="/images/bananasplit.webp " class="productimg ">
+            <img src="../images/bananasplit.webp " class="productimg ">
             <button class="btn btn-warning orderbtn ">Banana Split 2€</button>
         </div>
         <div class="product product5 ">
-            <img src="/images/dameblanche.png " class="productimg ">
+            <img src="../images/dameblanche.png " class="productimg ">
             <button class="btn btn-warning orderbtn ">dame blanche 2€</button>
         </div>
         <div class="product product6 ">
-            <img src="/images/cafe.webp " class="productimg ">
+            <img src="../images/cafe.webp " class="productimg ">
             <button class="btn btn-warning orderbtn ">café 2€</button>
         </div>
     </div>
 
     <div class="askburger products ">
         <div class="product product1 sb ">
-            <img src="/burger.png " class="productimg ">
+            <img src="../burger.png " class="productimg ">
             <button class="btn btn-warning bchosen ">Big Mac</button>
         </div>
         <div class="product product4 sb ">
-            <img src="/burger2.png " class="productimg ">
+            <img src="../burger2.png " class="productimg ">
             <button class="btn btn-warning bchosen ">McTasty</button>
         </div>
     </div>
     <div class="askdrink products ">
         <div class="product product1 sd ">
-            <img src="/images/vodka.png " class="productimg ">
+            <img src="../images/vodka.png " class="productimg ">
             <button class="btn btn-warning dchosen ">Vodka</button>
         </div>
         <div class="product product4 sd ">
-            <img src="/images/coca.png " class="productimg ">
+            <img src="../images/coca.png " class="productimg ">
             <button class="btn btn-warning dchosen ">Coca</button>
         </div>
 
     </div>
     <div class="asksauce products ">
         <div class="product product1 ss ">
-            <img src="/images/creamydeluxe.png " class="productimg ">
+            <img src="../images/creamydeluxe.png " class="productimg ">
             <button class="btn btn-warning schosen ">Creamy Deluxe</button>
         </div>
         <div class="product product4 ss ">
-            <img src="/images/classiquebbq.png " class="productimg ">
+            <img src="../images/classiquebbq.png " class="productimg ">
             <button class="btn btn-warning schosen ">Classique BBQ</button>
         </div>
     </div>
