fixed menu choices

--- a/order/index.html
+++ b/order/index.html
@@ -145,12 +145,12 @@
 
     <div class="askburger products ">
         <div class="product product1 sb ">
-            <img src="../burger.png " class="productimg ">
-            <button class="btn btn-warning bchosen ">Big Mac</button>
+            <img src="../images/bigDiego.png " class="productimg ">
+            <button class="btn btn-warning bchosen ">Big Diego</button>
         </div>
         <div class="product product4 sb ">
-            <img src="../burger2.png " class="productimg ">
-            <button class="btn btn-warning bchosen ">McTasty</button>
+            <img src="../mcChipper.png " class="productimg ">
+            <button class="btn btn-warning bchosen ">Mc Chipper</button>
         </div>
     </div>
     <div class="askdrink products ">
