--- a/connection/index.html
+++ b/connection/index.html
@@ -30,7 +30,7 @@
         <div class="input-group mb-3">
             <input type="password" class="form-control" placeholder="Mot De Passe" aria-label="Mot De Passe" aria-describedby="basic-addon1">
         </div>
-        <button class="btn btn-warning connect">Connection</button>
+        <button class="btn btn-warning connect">Connexion</button>
 
     </div>
 
