--- a/aboutpage/index.html
+++ b/aboutpage/index.html
@@ -33,17 +33,14 @@
         <p>L'histoire : Dora l'exploratrice est une série d'animation et une marque de restauration originaires des États-Unis. Sa première diffusion date du 14 août 2000. En France, elle a été diffusée à partir d'août 2003, sur TF1. Elle est destinée à
             tout le monde et raconte l'histoire d'une petite fille, d'origine hispano-américaine, accompagnée de son ami, le singe prénommé Babouche. Ils vont vivre de nombreuses aventures et être confrontés à des obstacles. Avec l'aide du sac à dos et
             de la carte, ils vont ensemble partir à la recherche de quelque chose ou de quelqu'un.</p>
-        <p>Sa mission : Pour mener à bien sa mission, elle va inciter les jeunes téléspectateurs à participer et faire comme s'ils étaient avec elle que ce soit dans la jungle ou au McDora !!! Cette aventurière va alterner les leçons qui sont toutes en anglais,
-            à travers des chansons et des jeux interactifs. Grâce à cela, Dora l'exploratrice va donner les bases de la langue anglaise en utilisant régulièrement des mots de base, des expressions courantes simples à retenir. Par exemple, elle va apprendre
-            aux enfants les couleurs ou encore les chiffres. Ce dessin animé est conseillé pour les enfants qui veulent apprendre l'anglais. Pourquoi avoir choisis de renommer notre restaurant McDora ? Adrien, Thomas et moi sommes des grands fans de cette
-            saga et donc pour lui rendre hommage, nous avons décidé de construire une nouvelle sorte de restaurant Macdonalds en incluant tous les personnages de cette série dans nos menus !</p>
 
     </div>
 
     <div class="paragraph2">
         <p class="text">Sa mission : Pour mener à bien sa mission, elle va inciter les jeunes téléspectateurs à participer et faire comme s'ils étaient avec elle que ce soit dans la jungle ou au McDora !!! Cette aventurière va alterner les leçons qui sont toutes en anglais,
             à travers des chansons et des jeux interactifs. Grâce à cela, Dora l'exploratrice va donner les bases de la langue anglaise en utilisant régulièrement des mots de base, des expressions courantes simples à retenir. Par exemple, elle va apprendre
-            aux enfants les couleurs ou encore les chiffres. Ce dessin animé est conseillé pour les enfants qui veulent apprendre l'anglais.
+            aux enfants les couleurs ou encore les chiffres. Ce dessin animé est conseillé pour les enfants qui veulent apprendre l'anglais. Pourquoi avoir choisis de renommer notre restaurant McDora ? Adrien, Thomas et moi sommes des grands fans de cette
+            saga et donc pour lui rendre hommage, nous avons décidé de construire une nouvelle sorte de restaurant Macdonalds en incluant tous les personnages de cette série dans nos menus !
         </p>
 
 
