--- a/aboutpage/index.html
+++ b/aboutpage/index.html
@@ -39,12 +39,12 @@
     <div class="paragraph2">
         <p class="text">Sa mission : Pour mener à bien sa mission, elle va inciter les jeunes téléspectateurs à participer et faire comme s'ils étaient avec elle que ce soit dans la jungle ou au McDora !!! Cette aventurière va alterner les leçons qui sont toutes en anglais,
             à travers des chansons et des jeux interactifs. Grâce à cela, Dora l'exploratrice va donner les bases de la langue anglaise en utilisant régulièrement des mots de base, des expressions courantes simples à retenir. Par exemple, elle va apprendre
-            aux enfants les couleurs ou encore les chiffres. Ce dessin animé est conseillé pour les enfants qui veulent apprendre l'anglais. Pourquoi avoir choisis de renommer notre restaurant McDora ? Adrien, Thomas et moi sommes des grands fans de cette
+            aux enfants les couleurs ou encore les chiffres. Ce dessin animé est conseillé pour les enfants qui veulent apprendre l'anglais. Pourquoi avoir choisis de renommer notre restaurant McDora ? En tant que fondateurs nous sommes des grands fans de cette
             saga et donc pour lui rendre hommage, nous avons décidé de construire une nouvelle sorte de restaurant Macdonalds en incluant tous les personnages de cette série dans nos menus !
         </p>
 
 
-        <p>Pourquoi avoir choisis de renommer notre restaurant McDora ? Adrien, Thomas et moi sommes des grands fan de cette saga et donc pour lui rendre hommage, nous avons décider de construire une nouvelle sorte de restaurant McDonald's en incluant tous
+        <p>Pourquoi avoir choisis de renommer notre restaurant McDora ? En tant que fondateurs nous sommes des grands fans de cette saga et donc pour lui rendre hommage, nous avons décider de construire une nouvelle sorte de restaurant McDonald's en incluant tous
             les personages de cette série dans nos menus !
         </p>
     </div>
