--- a/order/index.html
+++ b/order/index.html
@@ -149,7 +149,7 @@
             <button class="btn btn-warning bchosen ">Big Diego</button>
         </div>
         <div class="product product4 sb ">
-            <img src="../mcChipper.png " class="productimg ">
+            <img src="../images/mcChipper.png " class="productimg ">
             <button class="btn btn-warning bchosen ">Mc Chipper</button>
         </div>
     </div>
