--- a/order/index.html
+++ b/order/index.html
@@ -191,6 +191,9 @@
     <div class="total">
         <p class="pfont totalstr" id="totalstr">Total: 00.00€</p>
     </div>
+    <div class="commander">
+        <button style="width: 100%;height: 100%;" class="btn btn-success order" onclick="handlesubmit()">Commander</button>
+    </div>
 
     <button class="btn btn-danger back ">Retour</button>
 
