--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <ul class="banner">
         <li class="banneritem"><a href="index.html" class="pfont">McDora</a></li>
-        <li class="banneritem"><a href="/mcDora/order" class="pfont">Menus</a></li>
-        <li class="banneritem"><a href="/mcDora/nosrestau" class="pfont">Restaurants</a></li>
-        <li class="banneritem"><a href="/mcDora/aboutpage" class="pfont">A Propos</a></li>
-        <li class="banneritem"><a href="/mcDora/connection" class="pfont">Se Connecter</a></li>
+        <li class="banneritem"><a href="/order" class="pfont">Menus</a></li>
+        <li class="banneritem"><a href="/nosrestau" class="pfont">Restaurants</a></li>
+        <li class="banneritem"><a href="/aboutpage" class="pfont">A Propos</a></li>
+        <li class="banneritem"><a href="/connection" class="pfont">Se Connecter</a></li>
     </ul>
 
     <img class="pub1 " id="img1 " src="./images/pubBigdiego.png ">
